[tool.poetry]
name = "tibberflux"
version = "0.0.1"
description = "Tibber to InfluxDB exporter"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb = "^5.3.1"
gql = "^2.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
tibberflux = "tibberflux:main"
